--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 # Dependency directories
 node_modules/
 client/node_modules/
+server/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
